feat: Add update screen before join